<resources>
    <string name="app_name">Caravan</string>

    <string name="button_list_trips">Consultar viagens</string>
    <string name="button_add_trip">Cadastrar nova viagem</string>
    <string name="button_list_all_passengers">Consultar passageiros cadastrados</string>
    <string name="button_add_passenger">Cadastrar novo passageiro</string>
    <string name="button_preferences">Configurar opções do aplicativo</string>
    <string name="button_add">Adicionar</string>
    <string name="button_save">Salvar</string>
    <string name="button_search">Buscar</string>
    <string name="button_enter">Entrar</string>
    <string name="button_editPassenger">Editar detalhes do passageiro</string>
    <string name="button_deletePassenger">Excluir passageiro</string>
    <string name="button_addPassengerToTrip">Adicionar passageiro à viagem</string>
    <string name="button_editTrip">Editar detalhes da viagem</string>
    <string name="button_tripFinance">Relatório financeiro</string>
    <string name="button_deleteTrip">Excluir viagem</string>
    <string name="button_createAccount">Criar nova conta</string>
    <string name="button_loginAccount">Entrar em conta existente</string>
    <string name="button_logoutAccount">Sair da conta</string>
    <string name="button_selectPassenger">Selecionar passageiro</string>
    <string name="button_selectTrip">Selecionar viagem</string>
    <string name="button_selectPack">Selecionar pacote de viagem</string>
    <string name="button_passengerList">Lista de passageiros</string>
    <string name="button_passengerConfirmation">Confirmar presenças</string>
    <string name="button_packagesManage">Gerenciar pacotes de viagem</string>
    <string name="button_addPackageToTrip">Adicionar pacote à viagem</string>
    <string name="button_editPackage">Editar detalhes do pacote</string>
    <string name="button_deletePackage">Excluir pacote</string>
    <string name="button_changePackageTrip">Editar dados</string>
    <string name="button_removePassengerTrip">Remover passageiro da viagem</string>
    <string name="button_removePassengerTripPackage">Retirar pacote do passageiro</string>
    <string name="button_selectAll">Marcar todos</string>
    <string name="button_deselectAll">Desmarcar todos</string>
    <string name="button_back">Voltar</string>
    <string name="button_refreshvalues">Atualizar valores</string>
    <string name="button_generatedoc">Lista de passageiros para impressão</string>

    <string name="label_trips">Viagens</string>
    <string name="label_passengers">Passageiros</string>
    <string name="label_name">Nome</string>
    <string name="label_identity">Identidade</string>
    <string name="label_destination">Destino</string>
    <string name="label_identitytype">Tipo da Identidade</string>
    <string name="label_birthdate">Data de nascimento</string>
    <string name="label_phone">Telefone</string>
    <string name="label_address">Endereço</string>
    <string name="label_type">Tipo</string>
    <string name="label_price">Preço</string>
    <string name="label_description">Descrição</string>
    <string name="label_pin">PIN</string>
    <string name="label_email">E-mail</string>
    <string name="label_boarding">Embarque</string>
    <string name="label_landing">Desembarque</string>
    <string name="label_vehicle">Veículo</string>
    <string name="label_seat">Assento</string>
    <string name="label_paidamount">Valor pago</string>
    <string name="label_paidamountfull">Totalmente pago</string>
    <string name="label_seatquantity">Quantidade de vagas</string>
    <string name="label_pinscreen">Digite a sua senha de 4 dígitos para entrar no aplicativo.</string>
    <string name="label_pinscreeninit">Tipo</string>
    <string name="label_departuredate">Data de partida</string>
    <string name="label_returndate">Data de retorno</string>
    <string name="label_departurehour">Hora de partida</string>
    <string name="label_returnhour">Hora de retorno</string>
    <string name="label_initmethod">Método de entrada no aplicativo</string>
    <string name="label_totalvalue">Valor total</string>
    <string name="label_valueperpassenger">Valor por passageiro</string>
    <string name="label_totalvaluetrip">Valor total da viagem</string>

    <string name="hint_passengername">Nome do passageiro...</string>
    <string name="hint_passengeridentity">Identidade do passageiro...</string>
    <string name="hint_passengerphone">Telefone...</string>
    <string name="hint_passengerbirthdate">Data de nascimento...</string>
    <string name="hint_passengeraddress">Endereço do passageiro...</string>
    <string name="hint_passengervehicle">Veículo do passageiro...</string>
    <string name="hint_passengerseat">Assento do passageiro...</string>
    <string name="hint_passengerboarding">Local de embarque...</string>
    <string name="hint_passengerlanding">Local de desembarque...</string>
    <string name="hint_passengerpaidamount">Valor pago pelo passageiro...</string>
    <string name="hint_tripname">Nome da viagem...</string>
    <string name="hint_tripdestination">Destino da viagem...</string>
    <string name="hint_tripdeparturedate">Data de partida...</string>
    <string name="hint_tripdeparturehour">Hora de partida...</string>
    <string name="hint_tripreturndate">Data de retorno...</string>
    <string name="hint_tripreturnhour">Hora de retorno...</string>
    <string name="hint_tripseatquantity">Quantidade de vagas disponibilizadas...</string>
    <string name="hint_packagename">Nome do pacote...</string>
    <string name="hint_packagedescription">Descrição do pacote...</string>
    <string name="hint_packageprice">Preço do pacote por passageiro...</string>
    <string name="hint_email">E-mail...</string>
    <string name="hint_password">Senha...</string>
    <string name="hint_triptotalvalue">Custo total da viagem...</string>
    <string name="hint_passwordconfirm">Confirme a senha...</string>
    <string name="hint_goalname">Nome da meta financeira...</string>
    <string name="hint_goaldescription">Descrição da meta financeira...</string>

    <string name="switch_nonpaid">Mostrar apenas passageiros com dívida</string>

</resources>
