<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripEdit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/labelTripNameEdit"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_name" />

            <EditText
                android:id="@+id/editTripNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_tripname"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/labelTripDestinationEdit"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_destination" />

            <EditText
                android:id="@+id/editTripDestinationEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_tripdestination"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/labelTripDepartureDateEdit"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_departuredate" />

                    <EditText
                        android:id="@+id/editTripDepartureDateEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_tripdeparturedate"
                        android:inputType="date" />

                    <TextView
                        android:id="@+id/labelTripReturnDateEdit"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_returndate" />

                    <EditText
                        android:id="@+id/editTripReturnDateEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_tripreturndate"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/labelTripDepartureHourEdit"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_departurehour" />

                    <EditText
                        android:id="@+id/editTripDepartureHourEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_tripdeparturehour"
                        android:inputType="time" />

                    <TextView
                        android:id="@+id/labelTripReturnHourEdit"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_returnhour" />

                    <EditText
                        android:id="@+id/editTripReturnHourEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_tripreturnhour"
                        android:inputType="time" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/labelTripSeatQuantityEdit"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_seatquantity" />

            <EditText
                android:id="@+id/editTripSeatQuantityEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_tripseatquantity"
                android:inputType="number" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonTripSave"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                style="@style/MainScreenButtonTheme"
                android:layout_marginBottom="25dp"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>