<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassengerAdd">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/labelPassengerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_name" />

            <EditText
                android:id="@+id/editPassengerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_passengername"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/labelPassengerIdentity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_identity" />

            <EditText
                android:id="@+id/editPassengerIdentity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_passengeridentity"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/labelPassengerIdType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_identitytype" />

            <Spinner
                android:id="@+id/spinnerPassengerIdType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/labelPassengerBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_birthdate" />

                    <EditText
                        android:id="@+id/editPassengerBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_passengerbirthdate"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/labelPassengerPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_phone" />

                    <EditText
                        android:id="@+id/editPassengerPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_passengerphone"
                        android:inputType="textPersonName" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/labelPassengerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_address" />

            <EditText
                android:id="@+id/editPassengerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_passengeraddress"
                android:inputType="textPersonName" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPassengerAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add"
                style="@style/MainScreenButtonTheme"
                android:layout_marginBottom="25dp"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>